tests/ui/attributes/cold-attribute-application-54044.stderr
error: attribute should be applied to a function definition
  --> $DIR/cold-attribute-application-54044.rs:4:1
   |
LL | #[cold]
   | ^^^^^^^
...
LL | struct Foo;
   | ----------- not a function definition
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
note: the lint level is defined here
  --> $DIR/cold-attribute-application-54044.rs:2:9
   |
LL | #![deny(unused_attributes)]
   |         ^^^^^^^^^^^^^^^^^

error: attribute should be applied to a function definition
  --> $DIR/cold-attribute-application-54044.rs:10:5
   |
LL |     #[cold]
   |     ^^^^^^^
...
LL |     5;
   |     - not a function definition
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!

error: aborting due to 2 previous errors

